# buffett-munger-agent

./: CLAUDE.md  README.md  pyproject.toml
.claude/: .gitignore  settings.local.json
docs/: fastmcp-tool-registration.md  tushare-api-index.md
openspec/changes/archive/2026-03-21-add-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-21-stock-data-fetcher/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-22-add-daily-indicators/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-22-market-indicators-sort-limit/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-22-update-stock-fetcher-price-history/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-22-validate-market-indicators-limit/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-23-add-qwen-agent-mode/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-23-fix-system-prompt-not-injected/: design.md  proposal.md  tasks.md
openspec/specs/company-info/: spec.md
openspec/specs/daily-indicators/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/qwen-agent/: spec.md
openspec/specs/stock-fundamentals/: spec.md
openspec/specs/stock-price-history/: spec.md
src/buffett_munger_agent/: __main__.py  agent.py  mcp_server.py
src/buffett_munger_agent/data/: __init__.py  base.py  fetcher.py  models.py
tests/: test_agent.py  test_mcp_market_indicators.py
tests/data/: test_fetcher.py  test_models.py  test_tushare_provider_integration.py
(+15 files in other folders)
