[project]
name = "buffett-munger-agent"
version = "0.1.0"
description = "A value investing stock analysis agent powered by LLM"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
buffett-munger-agent = "buffett_munger_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buffett_munger_agent"]
